--- a/Exercícios/ex002/style.css
+++ b/Exercícios/ex002/style.css
@@ -109,6 +109,7 @@ article > h2#publicar:hover{
     color: #0F9409;
     padding: 5px;
     border-radius: 5px;
+    margin-left: 710px;
 }
 
 article > p.comentarios1{
