--- a/Exercícios/tour.am/css/style.css
+++ b/Exercícios/tour.am/css/style.css
@@ -41,6 +41,17 @@
 *::after {
   box-sizing: border-box;
 }
+header{
+  height: 120px;
+}
+
+#logo{
+  margin-bottom: 10px;
+  margin-right: auto;
+     margin-left: auto;
+     width: 100px;
+     height: 100px;
+}
 
 #dados{
   background-color: #0f0f68;
@@ -162,7 +173,7 @@ sup {
 }
 
 a {
-  color: #FFD333;
+  color: #3aff33;
   text-decoration: none;
   background-color: transparent;
 }
@@ -1255,6 +1266,7 @@ pre code {
     max-width: 25%;
   }
   .col-lg-4 {
+    padding: 15px;
     flex: 0 0 33.33333%;
     max-width: 33.33333%;
   }
@@ -1271,6 +1283,7 @@ pre code {
     max-width: 58.33333%;
   }
   .col-lg-8 {
+    padding: 15px;
     flex: 0 0 66.66667%;
     max-width: 66.66667%;
   }
@@ -9472,6 +9485,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .mb-30 {
+  margin-top: 30px;
   margin-bottom: 30px;
 }
 
