--- a/Exercícios/projeto/home.css
+++ b/Exercícios/projeto/home.css
@@ -179,7 +179,7 @@ p{
 .explore{
     width: 100%;
     height: 100vh;
-    background-image: url('./img/torre.png');
+    background-image: url('./img/free-aguas.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -191,6 +191,9 @@ p{
     width: 50%;
     padding: 50px;
     color: whitesmoke;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .explore-content h1{
@@ -198,11 +201,67 @@ p{
     margin: 50px;
 }
 
-
+.explore-content .line{
+    margin-bottom: 20px;
+}
 .explore-content p{
     color: rgb(221, 221, 221);
 }
 
 .explore-content .ctn{
     margin-top: 40px;
+}
+
+/*galeria de imgens*/
+.content-col{
+    width: 40%;
+}
+
+.image-col{
+    width: 60%;
+}
+
+.tours .image-gallery{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+}
+
+.image-gallery img{
+    max-width: 300px;
+    margin: 10px;
+}
+
+.content-col h1{
+    font-size: 7vmin;
+    color: #484872;
+}
+
+.content-col .line{
+    margin-left: -1px;
+}
+
+.content-col p{
+    padding: 0;
+    margin: 30px auto;
+}
+
+.content-col .ctn{
+    margin-left: -100px;
+}
+
+.footer{
+    width: 100%;
+    min-height: 200px;
+    padding: 20px 80px;
+    margin: 0;
+    background: #484872;
+    text-align: center;
+}
+
+.footer p{
+    color: whitesmoke;
+    margin: 20px auto;
+    padding: 20px auto;
 }
