--- a/Exercícios/projeto/home.css
+++ b/Exercícios/projeto/home.css
@@ -130,6 +130,42 @@ header{
         margin-top: 0px;
         border-bottom-right-radius: 30%;
     }
+
+/*eventos*/
+    .row{
+    flex-direction: column;
+    }
+
+    .row .col{
+    margin: 20px auto;
+    }
+
+    .col img{
+    max-width: 90%;
+    }
+
+    /*explore*/
+    .explore-content{
+        width: 100%;
+    }
+
+    .tours .col{
+        width: 100%;
+    }
+
+    .image-gallery{
+        justify-content: center;
+        align-items: center;
+    }
+
+    .image-gallery img{
+        width: 90%;
+    }
+
+    .footer{
+        padding: 10px;
+    }
+
 }
 
 /*Eventos*/
@@ -249,6 +285,14 @@ p{
 
 .content-col .ctn{
     margin-left: -100px;
+}
+/*Animaçõe de imagens*/
+img{
+    transition: transform .3s ease;
+}
+
+img:hover{
+    transform: scale(1.1);
 }
 
 .footer{
